<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:background="?android:colorPrimaryDark"
              android:layout_height="match_parent"
              android:layout_width="match_parent"
              android:orientation="vertical"
              tools:context=".activity.MainActivity"
              xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools">
	
	<TextView
			android:text="Settings (AUS)"
			style="@style/kroov_titlex"/>
	
	<ScrollView
			android:layout_height="match_parent"
			android:layout_width="match_parent">
		
		<LinearLayout
				android:layout_height="wrap_content"
				android:layout_width="match_parent"
				android:orientation="vertical"
				android:paddingBottom="50dp">
			
			<TextView
					android:text="@string/abs__application"
					style="@style/kroov_separator"/>
			
			<LinearLayout
					android:onClick="_permissions"
					style="@style/kroov_drawerx">
				
				<TextView
						android:text="@string/abs__permissions"
						style="@style/kroov_name"/>
				
				<TextView
						android:text="manage application's permissions"
						style="@style/kroov_description"/>
			
			</LinearLayout>
			
			<View style="@style/kroov_split"/>
			
			<LinearLayout
					android:onClick="_profiles"
					style="@style/kroov_drawerx">
				
				<TextView
						android:text="Profiles"
						style="@style/kroov_name"/>
				
				<TextView
						android:text="manage saaved profiles"
						style="@style/kroov_description"/>
			
			</LinearLayout>
			
			<View style="@style/kroov_split"/>
			
			<LinearLayout
					android:onClick="_ui"
					style="@style/kroov_drawerx">
				
				<TextView
						android:text="@string/abs__user_interface"
						style="@style/kroov_name"/>
				
				<TextView
						android:text="@string/txt__description_user_interface"
						style="@style/kroov_description"/>
			</LinearLayout>
			
			<View style="@style/kroov_split"/>
			
			<!--<LinearLayout-->
			<!--style="@style/kroov_drawerx"-->
			<!--android:onClick="_packages">-->
			
			<!--<TextView-->
			<!--style="@style/kroov_name"-->
			<!--android:text="Packages" />-->
			
			<!--<TextView-->
			<!--style="@style/kroov_description"-->
			<!--android:text="manage plugins packages" />-->
			<!--</LinearLayout>-->
			
			<!--<View style="@style/kroov_split" />-->
		
		</LinearLayout>
	
	</ScrollView>

</LinearLayout>