<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:colorPrimaryDark"
    android:orientation="vertical">

    <TextView
        android:id="@+id/name"
        style="@style/kroov_titlex"
        android:text="@string/abs__task" />

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_weight="1"
        android:background="@drawable/round_silk"
        android:paddingBottom="10dp"
        android:scrollbars="none">

        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <EditText
                android:id="@+id/feather"
                style="@style/kroov_feather"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:gravity="top"
                android:hint="@string/smp__hint_json"
                tools:ignore="Autofill,LabelFor,TextFields" />

        </ScrollView>

    </HorizontalScrollView>

    <Button
        style="?android:buttonBarButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="_save"
        android:text="@string/abs__save" />

</LinearLayout>